force-app/main/default/objects/ucl_Legal_Advisor__c/ucl_Legal_Advisor__c.object-meta.xml
<CustomObject>
    <label>Legal Advisor</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>