force-app/main/default/objects/ucl_Legal_Advisor__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>