force-app/main/default/objects/ucl_Legal_Advisor__c/fields/Cantidad_de_clientes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_clientes__c</fullName>
    <label>Cantidad de clientes</label>
    <summaryForeignKey>ucl_Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>