force-app/main/default/objects/ucl_Legal_Advisor__c/fields/Legal_Advisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advisor_ID__c</fullName>
    <displayFormat>LA-{0000}</displayFormat>
    <label>Legal Advisor ID</label>
    <type>AutoNumber</type>
</CustomField>