force-app/main/default/objects/ucl_Legal_Advisor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Legal Advisors</label>
</ListView>